before running GA, wanted to see if there were any brick sizes that would result in a positive profit

--- a/optimization_dsma_nb.ipynb
+++ b/optimization_dsma_nb.ipynb
@@ -56,14 +56,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Renko variable\n",
     "initial_brick_size = 0.0003\n",
     "# create a list of possible brick sizes a max at 0.001 and min at 0.00001 and each step is 0.00001\n",
-    "brick_size_list = np.arange(0.0003, 0.00101, 0.00001)\n",
+    "brick_size_list = np.arange(0.00031, 0.00101, 0.00001)\n",
     "brick_size_str = str(int(initial_brick_size*10000))\n",
     "\n",
     "# sma variables\n",
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,14 +105,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "def renko_ready(brick_size):\n",
-    "    brick_size_str = str(int(brick_size*10000))\n",
+    "    brick_size_str_fx = str(int(brick_size*100000))\n",
     "    # create a renko chart from the df dataframe\n",
-    "    renko_data = pd.read_csv(f'./brick_size_variations/renko_{brick_size_str}.csv')\n",
+    "    renko_data = pd.read_csv(f'./brick_size_variations/renko_full_data_{brick_size_str_fx}.csv')\n",
     "    renko_data['datetime'] = pd.to_datetime(renko_data['datetime'], format='%Y-%m-%d %H:%M:%S.%f')\n",
     "    renko_data = renko_data.set_index('datetime')\n",
     "    return renko_data\n"
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,7 @@
     "    # # determine the exit price\n",
     "    profit_df['exit_price'] = df.groupby('cum_position_count')['close'].last()\n",
     "    # # what was the direction, long or short?\n",
-    "    profit_df['direction'] = df.groupby('cum_position_count')['entry_signal'].first()\n",
+    "    profit_df['direction'] = df.groupby('cum_position_count')['sma_signal'].first()\n",
     "    profit_df['Nova_profit_initial'] = np.where((profit_df['direction'].str.strip() == 'buy'),\n",
     "                                            ((profit_df['exit_price'] + spread.loc['Close Spread Buy', 'Nova']) - (profit_df['entry_price'] + spread.loc['Spread Buy', 'Nova']))\n",
     "                                            * per_lot * lots, \n",
@@ -203,14 +203,13 @@
     "    profit_df['entry_time'] = pd.to_datetime(profit_df['entry_time'])\n",
     "    profit_df_new_index = profit_df.set_index('entry_time')\n",
     "    # find the sum of the nova and msolutions profit for each day\n",
-    "    # profit_df_daily = profit_df_new_index.resample('D').agg({'nova_profit': 'sum'})\n",
-    "    profit_df_daily = profit_df_new_index.resample('D').agg({'msolutions_profit': 'sum'})\n",
+    "    profit_df_daily = profit_df_new_index.resample('D').agg({'nova_profit': 'sum', 'msolutions_profit': 'sum'})\n",
     "    # drop the weekends by first adding in a new day of the week column\n",
     "    profit_df_daily['day_of_week'] = profit_df_daily.index.day_name()\n",
     "    # drop any day that is Saturday or Sunday\n",
     "    profit_df_daily = profit_df_daily.loc[(profit_df_daily['day_of_week'] != 'Saturday') & (profit_df_daily['day_of_week'] != 'Sunday')]\n",
     "    # find the number of times that profit_df_daily is below zero\n",
-    "    # profit_df_daily['nova_negative'] = np.where(profit_df_daily['nova_profit'] < 0, 1, 0)\n",
+    "    profit_df_daily['nova_negative'] = np.where(profit_df_daily['nova_profit'] < 0, 1, 0)\n",
     "    profit_df_daily['msolutions_negative'] = np.where(profit_df_daily['msolutions_profit'] < 0, 1, 0)\n",
     "    # find the sum of nova_negative and msolutions_negative\n",
     "    nova_negative_sum = profit_df_daily['nova_negative'].sum()\n",
@@ -234,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,6 +245,202 @@
     "    total_profit, days_in_drawdown, profit_factor = calc_profit_loss(renko_data_cols_added, lot_size)\n",
     "\n",
     "    return total_profit, days_in_drawdown, profit_factor"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Basic Parameters \n",
+    "Just looking if there is an a brick_size that is profitable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.00031\n",
+      "run: 0, brick_size: 0.00031, profit: -63713.28664315558, days_in_drawdown: 207, profit_factor: -0.10209983591673231\n",
+      "0.00032\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\WilliamFetzner\\AppData\\Local\\Temp\\ipykernel_720\\2701148201.py:8: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "  basic_parameters = pd.concat([basic_parameters, pd.DataFrame({'run': idx, 'brick_size': brick_size,\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "run: 1, brick_size: 0.00032, profit: -52541.57291310289, days_in_drawdown: 194, profit_factor: -0.08817963531534195\n",
+      "0.00033000000000000005\n",
+      "run: 2, brick_size: 0.00033000000000000005, profit: -64305.002401649435, days_in_drawdown: 211, profit_factor: -0.109505362270353\n",
+      "0.0003400000000000001\n",
+      "run: 3, brick_size: 0.0003400000000000001, profit: -37218.4130421086, days_in_drawdown: 185, profit_factor: -0.06776756806900852\n",
+      "0.0003500000000000001\n",
+      "run: 4, brick_size: 0.0003500000000000001, profit: -35523.94425679633, days_in_drawdown: 187, profit_factor: -0.06623539320204229\n",
+      "0.00036000000000000013\n",
+      "run: 5, brick_size: 0.00036000000000000013, profit: -20010.75966989069, days_in_drawdown: 185, profit_factor: -0.03909271983481036\n",
+      "0.00037000000000000016\n",
+      "run: 6, brick_size: 0.00037000000000000016, profit: -13977.210057166201, days_in_drawdown: 176, profit_factor: -0.028480955165462514\n",
+      "0.0003800000000000002\n",
+      "run: 7, brick_size: 0.0003800000000000002, profit: -22309.30466911735, days_in_drawdown: 183, profit_factor: -0.045979295950519715\n",
+      "0.0003900000000000002\n",
+      "run: 8, brick_size: 0.0003900000000000002, profit: -14565.708111323002, days_in_drawdown: 182, profit_factor: -0.03137726597818712\n",
+      "0.00040000000000000024\n",
+      "run: 9, brick_size: 0.00040000000000000024, profit: -3336.49396137216, days_in_drawdown: 178, profit_factor: -0.007503346281760169\n",
+      "0.00041000000000000026\n",
+      "run: 10, brick_size: 0.00041000000000000026, profit: -461.7523579617441, days_in_drawdown: 171, profit_factor: -0.0010664496238927184\n",
+      "0.0004200000000000003\n",
+      "run: 11, brick_size: 0.0004200000000000003, profit: -11074.793810833879, days_in_drawdown: 180, profit_factor: -0.025829819564547506\n",
+      "0.0004300000000000003\n",
+      "run: 12, brick_size: 0.0004300000000000003, profit: -10009.600712264213, days_in_drawdown: 174, profit_factor: -0.02392375808964768\n",
+      "0.00044000000000000034\n",
+      "run: 13, brick_size: 0.00044000000000000034, profit: 12987.928264439564, days_in_drawdown: 169, profit_factor: 0.03286302532490756\n",
+      "0.00045000000000000037\n",
+      "run: 14, brick_size: 0.00045000000000000037, profit: -1969.0849940398512, days_in_drawdown: 169, profit_factor: -0.00489481315214204\n",
+      "0.0004600000000000004\n",
+      "run: 15, brick_size: 0.0004600000000000004, profit: 3836.0975545180477, days_in_drawdown: 175, profit_factor: 0.009977525876651345\n",
+      "0.0004700000000000004\n",
+      "run: 16, brick_size: 0.0004700000000000004, profit: 6474.682449772602, days_in_drawdown: 180, profit_factor: 0.017305932481209003\n",
+      "0.00048000000000000045\n",
+      "run: 17, brick_size: 0.00048000000000000045, profit: 28311.07194945611, days_in_drawdown: 164, profit_factor: 0.08009602572771825\n",
+      "0.0004900000000000004\n",
+      "run: 18, brick_size: 0.0004900000000000004, profit: 6507.416257181798, days_in_drawdown: 171, profit_factor: 0.018225508589463237\n",
+      "0.0005000000000000004\n",
+      "run: 19, brick_size: 0.0005000000000000004, profit: 28277.507336378585, days_in_drawdown: 163, profit_factor: 0.0849639521760246\n",
+      "0.0005100000000000005\n",
+      "run: 20, brick_size: 0.0005100000000000005, profit: 37648.58319748273, days_in_drawdown: 147, profit_factor: 0.11669879239905319\n",
+      "0.0005200000000000005\n",
+      "run: 21, brick_size: 0.0005200000000000005, profit: 31682.953089103845, days_in_drawdown: 159, profit_factor: 0.09825164907102824\n",
+      "0.0005300000000000005\n",
+      "run: 22, brick_size: 0.0005300000000000005, profit: 19070.586227169504, days_in_drawdown: 174, profit_factor: 0.05970388530153493\n",
+      "0.0005400000000000005\n",
+      "run: 23, brick_size: 0.0005400000000000005, profit: 34234.20210913123, days_in_drawdown: 158, profit_factor: 0.1115986897068285\n",
+      "0.0005500000000000006\n",
+      "run: 24, brick_size: 0.0005500000000000006, profit: 25942.374686363204, days_in_drawdown: 167, profit_factor: 0.08507843215567522\n",
+      "0.0005600000000000006\n",
+      "run: 25, brick_size: 0.0005600000000000006, profit: 30424.92618561768, days_in_drawdown: 174, profit_factor: 0.10296168454522132\n",
+      "0.0005700000000000006\n",
+      "run: 26, brick_size: 0.0005700000000000006, profit: 15816.281610164731, days_in_drawdown: 174, profit_factor: 0.05277376458439697\n",
+      "0.0005800000000000007\n",
+      "run: 27, brick_size: 0.0005800000000000007, profit: 21519.41222260312, days_in_drawdown: 173, profit_factor: 0.07322187758273699\n",
+      "0.0005900000000000007\n",
+      "run: 28, brick_size: 0.0005900000000000007, profit: 28806.71770222205, days_in_drawdown: 157, profit_factor: 0.10242316083237242\n",
+      "0.0006000000000000007\n",
+      "run: 29, brick_size: 0.0006000000000000007, profit: 13253.761253629385, days_in_drawdown: 171, profit_factor: 0.04630406844401395\n",
+      "0.0006100000000000007\n",
+      "run: 30, brick_size: 0.0006100000000000007, profit: 27831.164055010257, days_in_drawdown: 158, profit_factor: 0.10318731614471746\n",
+      "0.0006200000000000008\n",
+      "run: 31, brick_size: 0.0006200000000000008, profit: 37183.25572481505, days_in_drawdown: 163, profit_factor: 0.13958038155611333\n",
+      "0.0006300000000000008\n",
+      "run: 32, brick_size: 0.0006300000000000008, profit: 24573.67649981768, days_in_drawdown: 160, profit_factor: 0.09431242101796848\n",
+      "0.0006400000000000008\n",
+      "run: 33, brick_size: 0.0006400000000000008, profit: 36676.690691065094, days_in_drawdown: 151, profit_factor: 0.14589522772135946\n",
+      "0.0006500000000000008\n",
+      "run: 34, brick_size: 0.0006500000000000008, profit: 23403.37055538298, days_in_drawdown: 162, profit_factor: 0.09078892874037424\n",
+      "0.0006600000000000009\n",
+      "run: 35, brick_size: 0.0006600000000000009, profit: 27309.77370005688, days_in_drawdown: 164, profit_factor: 0.11060749284577245\n",
+      "0.0006700000000000009\n",
+      "run: 36, brick_size: 0.0006700000000000009, profit: 22041.775855150816, days_in_drawdown: 176, profit_factor: 0.08921315324593798\n",
+      "0.0006800000000000009\n",
+      "run: 37, brick_size: 0.0006800000000000009, profit: 31898.483490624996, days_in_drawdown: 160, profit_factor: 0.13432612050720016\n",
+      "0.0006900000000000009\n",
+      "run: 38, brick_size: 0.0006900000000000009, profit: 22201.468568294098, days_in_drawdown: 171, profit_factor: 0.09218102196388737\n",
+      "0.000700000000000001\n",
+      "run: 39, brick_size: 0.000700000000000001, profit: 39454.22096011728, days_in_drawdown: 166, profit_factor: 0.17870904812001237\n",
+      "0.000710000000000001\n",
+      "run: 40, brick_size: 0.000710000000000001, profit: 23634.4188457343, days_in_drawdown: 166, profit_factor: 0.10333780494356447\n",
+      "0.000720000000000001\n",
+      "run: 41, brick_size: 0.000720000000000001, profit: 29142.04645209576, days_in_drawdown: 161, profit_factor: 0.12796875031984553\n",
+      "0.000730000000000001\n",
+      "run: 42, brick_size: 0.000730000000000001, profit: 32091.11026477079, days_in_drawdown: 163, profit_factor: 0.14678115532597003\n",
+      "0.0007400000000000011\n",
+      "run: 43, brick_size: 0.0007400000000000011, profit: 22085.25447938872, days_in_drawdown: 157, profit_factor: 0.09861069813080224\n",
+      "0.0007500000000000011\n",
+      "run: 44, brick_size: 0.0007500000000000011, profit: 39103.656024544835, days_in_drawdown: 163, profit_factor: 0.18654353272988702\n",
+      "0.0007600000000000011\n",
+      "run: 45, brick_size: 0.0007600000000000011, profit: 35507.21211914722, days_in_drawdown: 153, profit_factor: 0.17170357930620236\n",
+      "0.0007700000000000012\n",
+      "run: 46, brick_size: 0.0007700000000000012, profit: 32265.75664485715, days_in_drawdown: 165, profit_factor: 0.15596267387151316\n",
+      "0.0007800000000000012\n",
+      "run: 47, brick_size: 0.0007800000000000012, profit: 35265.457249635394, days_in_drawdown: 162, profit_factor: 0.1747015553664153\n",
+      "0.0007900000000000012\n",
+      "run: 48, brick_size: 0.0007900000000000012, profit: 36295.00466541368, days_in_drawdown: 154, profit_factor: 0.18363604209626286\n",
+      "0.0008000000000000012\n",
+      "run: 49, brick_size: 0.0008000000000000012, profit: 39702.35041406438, days_in_drawdown: 155, profit_factor: 0.20916252570203064\n",
+      "0.0008100000000000013\n",
+      "run: 50, brick_size: 0.0008100000000000013, profit: 45399.303164342906, days_in_drawdown: 146, profit_factor: 0.24537387389408252\n",
+      "0.0008200000000000013\n",
+      "run: 51, brick_size: 0.0008200000000000013, profit: 24739.54583721511, days_in_drawdown: 156, profit_factor: 0.1268225188821894\n",
+      "0.0008300000000000013\n",
+      "run: 52, brick_size: 0.0008300000000000013, profit: 33874.09877140498, days_in_drawdown: 151, profit_factor: 0.18189367814724894\n",
+      "0.0008400000000000013\n",
+      "run: 53, brick_size: 0.0008400000000000013, profit: 36501.85683714358, days_in_drawdown: 153, profit_factor: 0.19894736299788807\n",
+      "0.0008500000000000014\n",
+      "run: 54, brick_size: 0.0008500000000000014, profit: 29768.033091529593, days_in_drawdown: 166, profit_factor: 0.158935301302617\n",
+      "0.0008600000000000014\n",
+      "run: 55, brick_size: 0.0008600000000000014, profit: 36731.77291986322, days_in_drawdown: 151, profit_factor: 0.21202280091075346\n",
+      "0.0008700000000000014\n",
+      "run: 56, brick_size: 0.0008700000000000014, profit: 37064.82201493872, days_in_drawdown: 165, profit_factor: 0.21301660563117775\n",
+      "0.0008800000000000014\n",
+      "run: 57, brick_size: 0.0008800000000000014, profit: 34591.336228879256, days_in_drawdown: 151, profit_factor: 0.19912694160565084\n",
+      "0.0008900000000000015\n",
+      "run: 58, brick_size: 0.0008900000000000015, profit: 41082.61078416281, days_in_drawdown: 150, profit_factor: 0.2508408312998377\n",
+      "0.0009000000000000015\n",
+      "run: 59, brick_size: 0.0009000000000000015, profit: 26417.253020992368, days_in_drawdown: 159, profit_factor: 0.1546748653648708\n",
+      "0.0009100000000000015\n",
+      "run: 60, brick_size: 0.0009100000000000015, profit: 26648.960202794733, days_in_drawdown: 157, profit_factor: 0.1548049846726367\n",
+      "0.0009200000000000015\n",
+      "run: 61, brick_size: 0.0009200000000000015, profit: 31575.998073656243, days_in_drawdown: 147, profit_factor: 0.19141084169569964\n",
+      "0.0009300000000000016\n",
+      "run: 62, brick_size: 0.0009300000000000016, profit: 33558.12123656882, days_in_drawdown: 158, profit_factor: 0.2081605411270834\n",
+      "0.0009400000000000016\n",
+      "run: 63, brick_size: 0.0009400000000000016, profit: 29472.77746227837, days_in_drawdown: 153, profit_factor: 0.18147331451503654\n",
+      "0.0009500000000000016\n",
+      "run: 64, brick_size: 0.0009500000000000016, profit: 31751.874762413463, days_in_drawdown: 149, profit_factor: 0.19923683803336117\n",
+      "0.0009600000000000017\n",
+      "run: 65, brick_size: 0.0009600000000000017, profit: 26942.465068346195, days_in_drawdown: 150, profit_factor: 0.16996561625116482\n",
+      "0.0009700000000000017\n",
+      "run: 66, brick_size: 0.0009700000000000017, profit: 19952.773838226825, days_in_drawdown: 146, profit_factor: 0.1260471900160063\n",
+      "0.0009800000000000017\n",
+      "run: 67, brick_size: 0.0009800000000000017, profit: 31862.262025748525, days_in_drawdown: 139, profit_factor: 0.214349528221867\n",
+      "0.0009900000000000017\n",
+      "run: 68, brick_size: 0.0009900000000000017, profit: 22971.820638858313, days_in_drawdown: 149, profit_factor: 0.15160365585896227\n",
+      "0.0010000000000000018\n",
+      "run: 69, brick_size: 0.0010000000000000018, profit: 35296.26502781843, days_in_drawdown: 148, profit_factor: 0.24707432290675987\n"
+     ]
+    }
+   ],
+   "source": [
+    "# initize a dataframe to store the results\n",
+    "basic_parameters = pd.DataFrame(columns=['run', 'brick_size', 'total_profit', 'days_in_drawdown', 'profit_factor'])\n",
+    "for idx, brick_size in enumerate(brick_size_list):\n",
+    "    print(brick_size)\n",
+    "    total_profit, days_in_drawdown, profit_factor = making_calculations(brick_size, initial_sma_length, initial_smoothing_sma, 2)\n",
+    "    print(f'run: {idx}, brick_size: {brick_size}, profit: {total_profit}, days_in_drawdown: {days_in_drawdown}, profit_factor: {profit_factor}')\n",
+    "    # save it to a dataframe\n",
+    "    basic_parameters = pd.concat([basic_parameters, pd.DataFrame({'run': idx, 'brick_size': brick_size, \n",
+    "        'total_profit': total_profit, 'days_in_drawdown': days_in_drawdown, 'profit_factor': profit_factor}, index=[0])])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save basic_parameters to a csv file\n",
+    "# basic_parameters.to_csv('basic_parameters.csv')"
    ]
   },
   {
@@ -11068,9 +11263,6 @@
     "        num_evaluations +=  1\n",
     "        print(num_evaluations)\n",
     "        return (0,)\n",
-    "\n",
-    "    \n",
-    "    \n",
     "\n",
     "toolbox.register(\"evaluate\", eval_func)\n",
     "\n",
