Working through how to add in pyramid orders

--- a/double3_sma_nb.ipynb
+++ b/double3_sma_nb.ipynb
@@ -8886,7 +8886,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create a new column for pyramid_position_count that is 1 if "
+    "# create a new column for pyramid_position_possible that is 1 if the exit_price is >= brick_size*sma_length\n"
    ]
   }
  ],
