made the move from the downloads folder automatic

--- a/editing_calendar_statement.ipynb
+++ b/editing_calendar_statement.ipynb
@@ -12,16 +12,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'C:/Users/WilliamFetzner/AppData/Roaming/MetaQuotes/Terminal/0C2BFA140CA8FBEFEDCADDDEDD61AA24/MQL4/Files/calendar_statement_2024_3_10.csv'"
+       "'C:/Users/WilliamFetzner/AppData/Roaming/MetaQuotes/Terminal/0C2BFA140CA8FBEFEDCADDDEDD61AA24/MQL4/Files/calendar_statement_2024_3_17.csv'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -34,6 +34,14 @@
     "year = sunday.year\n",
     "month = sunday.month\n",
     "day = sunday.day\n",
+    "# rename the file\n",
+    "import os\n",
+    "os.rename(\"C:/Users/WilliamFetzner/Downloads/calendar_statement.csv\", \n",
+    "          \"C:/Users/WilliamFetzner/Downloads/calendar_statement_\" + str(year) + '_' + str(month) + '_' +  str(day) + \".csv\")\n",
+    "# move the file from downloads to the correct location\n",
+    "import shutil\n",
+    "shutil.move(\"C:/Users/WilliamFetzner/Downloads/calendar_statement_\" + str(year) + '_' + str(month) + '_' +  str(day) + \".csv\", \n",
+    "            \"C:/Users/WilliamFetzner/AppData/Roaming/MetaQuotes/Terminal/0C2BFA140CA8FBEFEDCADDDEDD61AA24/MQL4/Files/calendar_statement_\" + str(year) + '_' + str(month) + '_' +  str(day) + \".csv\")\n",
     "# import the file\n",
     "filename = \"C:/Users/WilliamFetzner/AppData/Roaming/MetaQuotes/Terminal/0C2BFA140CA8FBEFEDCADDDEDD61AA24/MQL4/Files/calendar_statement_\" + str(year) + '_' + str(month) + '_' +  str(day) + \".csv\"\n",
     "tester_location = \"C:/Users/WilliamFetzner/AppData/Roaming/MetaQuotes/Terminal/0C2BFA140CA8FBEFEDCADDDEDD61AA24/tester/files/calendar_statement_\" + str(year) + '_' + str(month) + '_' +  str(day) + \".csv\"\n",
@@ -43,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -76,222 +84,213 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2024.03.11 10:00:00</td>\n",
-       "      <td>(Spain) Retail Sales MoM</td>\n",
+       "      <td>2024.03.18 10:00:00</td>\n",
+       "      <td>(Austria) CPI</td>\n",
        "      <td>High</td>\n",
        "      <td>EUR</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2024.03.11 10:00:00</td>\n",
-       "      <td>(Spain) Retail Sales YoY</td>\n",
+       "      <td>2024.03.18 12:00:00</td>\n",
+       "      <td>(Euro Area) CPI</td>\n",
        "      <td>High</td>\n",
        "      <td>EUR</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2024.03.12 09:00:00</td>\n",
-       "      <td>(Germany) CPI</td>\n",
-       "      <td>High</td>\n",
-       "      <td>EUR</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2024.03.12 14:30:00</td>\n",
-       "      <td>(United States) CPI</td>\n",
-       "      <td>High</td>\n",
-       "      <td>USD</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2024.03.12 14:30:00</td>\n",
-       "      <td>(United States) Inflation Rate MoM</td>\n",
-       "      <td>High</td>\n",
-       "      <td>USD</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>2024.03.12 14:30:00</td>\n",
-       "      <td>(United States) CPI s.a</td>\n",
-       "      <td>High</td>\n",
-       "      <td>USD</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>2024.03.12 14:30:00</td>\n",
-       "      <td>(United States) Core Inflation Rate MoM</td>\n",
-       "      <td>High</td>\n",
-       "      <td>USD</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>2024.03.12 14:30:00</td>\n",
-       "      <td>(United States) Core Inflation Rate YoY</td>\n",
-       "      <td>High</td>\n",
-       "      <td>USD</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>2024.03.12 14:30:00</td>\n",
-       "      <td>(United States) Inflation Rate YoY</td>\n",
-       "      <td>High</td>\n",
-       "      <td>USD</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>2024.03.14 10:00:00</td>\n",
-       "      <td>(Spain) CPI</td>\n",
-       "      <td>High</td>\n",
-       "      <td>EUR</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>2024.03.14 14:30:00</td>\n",
-       "      <td>(United States) PPI MoM</td>\n",
-       "      <td>High</td>\n",
-       "      <td>USD</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>2024.03.14 14:30:00</td>\n",
-       "      <td>(United States) Retail Sales Ex Gas/Autos MoM</td>\n",
-       "      <td>High</td>\n",
-       "      <td>USD</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>2024.03.14 14:30:00</td>\n",
-       "      <td>(United States) Retail Sales MoM</td>\n",
-       "      <td>High</td>\n",
-       "      <td>USD</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>2024.03.14 14:30:00</td>\n",
-       "      <td>(United States) Retail Sales YoY</td>\n",
-       "      <td>High</td>\n",
-       "      <td>USD</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>2024.03.14 14:30:00</td>\n",
-       "      <td>(United States) Retail Sales Ex Autos MoM</td>\n",
-       "      <td>High</td>\n",
-       "      <td>USD</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>2024.03.14 14:30:00</td>\n",
-       "      <td>(United States) Jobless Claims 4-week Average</td>\n",
-       "      <td>High</td>\n",
-       "      <td>USD</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>2024.03.14 14:30:00</td>\n",
-       "      <td>(United States) Initial Jobless Claims</td>\n",
-       "      <td>High</td>\n",
-       "      <td>USD</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>2024.03.14 14:30:00</td>\n",
-       "      <td>(United States) Continuing Jobless Claims</td>\n",
-       "      <td>High</td>\n",
-       "      <td>USD</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>2024.03.14 20:00:00</td>\n",
+       "      <td>2024.03.19 10:30:00</td>\n",
        "      <td>(Euro Area) ECB Guindos Speech</td>\n",
        "      <td>High</td>\n",
        "      <td>EUR</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>2024.03.15 12:00:00</td>\n",
-       "      <td>(Italy) Retail Sales YoY</td>\n",
+       "      <th>3</th>\n",
+       "      <td>2024.03.19 12:00:00</td>\n",
+       "      <td>(Germany) ZEW Economic Sentiment Index</td>\n",
        "      <td>High</td>\n",
        "      <td>EUR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2024.03.19 14:30:00</td>\n",
+       "      <td>(United States) Building Permits</td>\n",
+       "      <td>High</td>\n",
+       "      <td>USD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2024.03.20 20:00:00</td>\n",
+       "      <td>(United States) Fed Interest Rate Decision</td>\n",
+       "      <td>High</td>\n",
+       "      <td>USD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2024.03.20 20:00:00</td>\n",
+       "      <td>(United States) FOMC Economic Projections</td>\n",
+       "      <td>High</td>\n",
+       "      <td>USD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2024.03.20 20:30:00</td>\n",
+       "      <td>(United States) Fed Press Conference</td>\n",
+       "      <td>High</td>\n",
+       "      <td>USD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2024.03.21 10:15:00</td>\n",
+       "      <td>(France) HCOB Services PMI</td>\n",
+       "      <td>High</td>\n",
+       "      <td>EUR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2024.03.21 10:15:00</td>\n",
+       "      <td>(France) HCOB Manufacturing PMI</td>\n",
+       "      <td>High</td>\n",
+       "      <td>EUR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>2024.03.21 10:30:00</td>\n",
+       "      <td>(Germany) HCOB Services PMI</td>\n",
+       "      <td>High</td>\n",
+       "      <td>EUR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>2024.03.21 10:30:00</td>\n",
+       "      <td>(Germany) HCOB Manufacturing PMI</td>\n",
+       "      <td>High</td>\n",
+       "      <td>EUR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>2024.03.21 11:00:00</td>\n",
+       "      <td>(Euro Area) HCOB Manufacturing PMI</td>\n",
+       "      <td>High</td>\n",
+       "      <td>EUR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>2024.03.21 11:00:00</td>\n",
+       "      <td>(Euro Area) HCOB Services PMI</td>\n",
+       "      <td>High</td>\n",
+       "      <td>EUR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>2024.03.21 14:30:00</td>\n",
+       "      <td>(United States) Continuing Jobless Claims</td>\n",
+       "      <td>High</td>\n",
+       "      <td>USD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>2024.03.21 14:30:00</td>\n",
+       "      <td>(United States) Initial Jobless Claims</td>\n",
+       "      <td>High</td>\n",
+       "      <td>USD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>2024.03.21 14:30:00</td>\n",
+       "      <td>(United States) Jobless Claims 4-week Average</td>\n",
+       "      <td>High</td>\n",
+       "      <td>USD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>2024.03.21 15:45:00</td>\n",
+       "      <td>(United States) S&amp;P Global Services PMI</td>\n",
+       "      <td>High</td>\n",
+       "      <td>USD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>2024.03.21 15:45:00</td>\n",
+       "      <td>(United States) S&amp;P Global Manufacturing PMI</td>\n",
+       "      <td>High</td>\n",
+       "      <td>USD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>2024.03.21 16:00:00</td>\n",
+       "      <td>(United States) Existing Home Sales MoM</td>\n",
+       "      <td>High</td>\n",
+       "      <td>USD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>20</th>\n",
-       "      <td>2024.03.15 12:00:00</td>\n",
-       "      <td>(Italy) Retail Sales MoM</td>\n",
+       "      <td>2024.03.21 16:00:00</td>\n",
+       "      <td>(United States) Existing Home Sales</td>\n",
        "      <td>High</td>\n",
-       "      <td>EUR</td>\n",
+       "      <td>USD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>21</th>\n",
-       "      <td>2024.03.15 14:30:00</td>\n",
-       "      <td>(United States) NY Empire State Manufacturing ...</td>\n",
+       "      <td>2024.03.22 11:00:00</td>\n",
+       "      <td>(Germany) Ifo Business Climate</td>\n",
        "      <td>High</td>\n",
-       "      <td>USD</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>2024.03.15 16:00:00</td>\n",
-       "      <td>(United States) Michigan Consumer Sentiment</td>\n",
-       "      <td>High</td>\n",
-       "      <td>USD</td>\n",
+       "      <td>EUR</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                   Date                                              Event  \\\n",
-       "0   2024.03.11 10:00:00                           (Spain) Retail Sales MoM   \n",
-       "1   2024.03.11 10:00:00                           (Spain) Retail Sales YoY   \n",
-       "2   2024.03.12 09:00:00                                      (Germany) CPI   \n",
-       "3   2024.03.12 14:30:00                                (United States) CPI   \n",
-       "4   2024.03.12 14:30:00                 (United States) Inflation Rate MoM   \n",
-       "5   2024.03.12 14:30:00                            (United States) CPI s.a   \n",
-       "6   2024.03.12 14:30:00            (United States) Core Inflation Rate MoM   \n",
-       "7   2024.03.12 14:30:00            (United States) Core Inflation Rate YoY   \n",
-       "8   2024.03.12 14:30:00                 (United States) Inflation Rate YoY   \n",
-       "9   2024.03.14 10:00:00                                        (Spain) CPI   \n",
-       "10  2024.03.14 14:30:00                            (United States) PPI MoM   \n",
-       "11  2024.03.14 14:30:00      (United States) Retail Sales Ex Gas/Autos MoM   \n",
-       "12  2024.03.14 14:30:00                   (United States) Retail Sales MoM   \n",
-       "13  2024.03.14 14:30:00                   (United States) Retail Sales YoY   \n",
-       "14  2024.03.14 14:30:00          (United States) Retail Sales Ex Autos MoM   \n",
-       "15  2024.03.14 14:30:00      (United States) Jobless Claims 4-week Average   \n",
-       "16  2024.03.14 14:30:00             (United States) Initial Jobless Claims   \n",
-       "17  2024.03.14 14:30:00          (United States) Continuing Jobless Claims   \n",
-       "18  2024.03.14 20:00:00                     (Euro Area) ECB Guindos Speech   \n",
-       "19  2024.03.15 12:00:00                           (Italy) Retail Sales YoY   \n",
-       "20  2024.03.15 12:00:00                           (Italy) Retail Sales MoM   \n",
-       "21  2024.03.15 14:30:00  (United States) NY Empire State Manufacturing ...   \n",
-       "22  2024.03.15 16:00:00        (United States) Michigan Consumer Sentiment   \n",
+       "                   Date                                          Event Impact  \\\n",
+       "0   2024.03.18 10:00:00                                  (Austria) CPI   High   \n",
+       "1   2024.03.18 12:00:00                                (Euro Area) CPI   High   \n",
+       "2   2024.03.19 10:30:00                 (Euro Area) ECB Guindos Speech   High   \n",
+       "3   2024.03.19 12:00:00         (Germany) ZEW Economic Sentiment Index   High   \n",
+       "4   2024.03.19 14:30:00               (United States) Building Permits   High   \n",
+       "5   2024.03.20 20:00:00     (United States) Fed Interest Rate Decision   High   \n",
+       "6   2024.03.20 20:00:00      (United States) FOMC Economic Projections   High   \n",
+       "7   2024.03.20 20:30:00           (United States) Fed Press Conference   High   \n",
+       "8   2024.03.21 10:15:00                     (France) HCOB Services PMI   High   \n",
+       "9   2024.03.21 10:15:00                (France) HCOB Manufacturing PMI   High   \n",
+       "10  2024.03.21 10:30:00                    (Germany) HCOB Services PMI   High   \n",
+       "11  2024.03.21 10:30:00               (Germany) HCOB Manufacturing PMI   High   \n",
+       "12  2024.03.21 11:00:00             (Euro Area) HCOB Manufacturing PMI   High   \n",
+       "13  2024.03.21 11:00:00                  (Euro Area) HCOB Services PMI   High   \n",
+       "14  2024.03.21 14:30:00      (United States) Continuing Jobless Claims   High   \n",
+       "15  2024.03.21 14:30:00         (United States) Initial Jobless Claims   High   \n",
+       "16  2024.03.21 14:30:00  (United States) Jobless Claims 4-week Average   High   \n",
+       "17  2024.03.21 15:45:00        (United States) S&P Global Services PMI   High   \n",
+       "18  2024.03.21 15:45:00   (United States) S&P Global Manufacturing PMI   High   \n",
+       "19  2024.03.21 16:00:00        (United States) Existing Home Sales MoM   High   \n",
+       "20  2024.03.21 16:00:00            (United States) Existing Home Sales   High   \n",
+       "21  2024.03.22 11:00:00                 (Germany) Ifo Business Climate   High   \n",
        "\n",
-       "   Impact Currency  \n",
-       "0    High      EUR  \n",
-       "1    High      EUR  \n",
-       "2    High      EUR  \n",
-       "3    High      USD  \n",
-       "4    High      USD  \n",
-       "5    High      USD  \n",
-       "6    High      USD  \n",
-       "7    High      USD  \n",
-       "8    High      USD  \n",
-       "9    High      EUR  \n",
-       "10   High      USD  \n",
-       "11   High      USD  \n",
-       "12   High      USD  \n",
-       "13   High      USD  \n",
-       "14   High      USD  \n",
-       "15   High      USD  \n",
-       "16   High      USD  \n",
-       "17   High      USD  \n",
-       "18   High      EUR  \n",
-       "19   High      EUR  \n",
-       "20   High      EUR  \n",
-       "21   High      USD  \n",
-       "22   High      USD  "
+       "   Currency  \n",
+       "0       EUR  \n",
+       "1       EUR  \n",
+       "2       EUR  \n",
+       "3       EUR  \n",
+       "4       USD  \n",
+       "5       USD  \n",
+       "6       USD  \n",
+       "7       USD  \n",
+       "8       EUR  \n",
+       "9       EUR  \n",
+       "10      EUR  \n",
+       "11      EUR  \n",
+       "12      EUR  \n",
+       "13      EUR  \n",
+       "14      USD  \n",
+       "15      USD  \n",
+       "16      USD  \n",
+       "17      USD  \n",
+       "18      USD  \n",
+       "19      USD  \n",
+       "20      USD  \n",
+       "21      EUR  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
